[tool.poetry]
name = "core"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
debugpy = "^1.6.6"
pre-commit = "^3.2.0"


[tool.poetry.group.typing.dependencies]
isort = "^5.12.0"
mypy = "^1.1.1"
black = "^23.1.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
